--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ deploy:
   provider: elasticbeanstalk
   region: 'us-east-1'
   app: 'multi-docker'
-  env: 'MultiDocker-env'
+  env: 'Multidocker-env'
   bucket_name: 'elasticbeanstalk-us-east-1-369426144387'
   bucket_path: 'docker-multi'
   on:
